@@ -1,17 +1,17 @@
 /*
- * Copyright 2015-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.cxx;
@@ -19,6 +19,7 @@ package com.facebook.buck.cxx;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertThat;
 
@@ -29,15 +30,17 @@ import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
 import com.facebook.buck.core.model.InternalFlavor;
+import com.facebook.buck.core.model.impl.BuildTargetPaths;
 import com.facebook.buck.core.rulekey.RuleKey;
+import com.facebook.buck.core.rules.BuildRule;
 import com.facebook.buck.core.rules.SourcePathRuleFinder;
 import com.facebook.buck.core.rules.impl.FakeBuildRule;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
 import com.facebook.buck.core.sourcepath.FakeSourcePath;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.sourcepath.SourcePath;
-import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
-import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolverAdapter;
+import com.facebook.buck.core.toolchain.impl.ToolchainProviderBuilder;
 import com.facebook.buck.core.toolchain.tool.Tool;
 import com.facebook.buck.core.toolchain.tool.impl.CommandTool;
 import com.facebook.buck.core.toolchain.tool.impl.HashedFileTool;
@@ -47,22 +50,34 @@ import com.facebook.buck.cxx.toolchain.DefaultCompiler;
 import com.facebook.buck.cxx.toolchain.GccCompiler;
 import com.facebook.buck.cxx.toolchain.GccPreprocessor;
 import com.facebook.buck.cxx.toolchain.Preprocessor;
-import com.facebook.buck.io.file.MorePaths;
+import com.facebook.buck.cxx.toolchain.ToolType;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
+import com.facebook.buck.io.pathformat.PathFormatter;
 import com.facebook.buck.rules.args.AddsToRuleKeyFunction;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
 import com.facebook.buck.rules.keys.TestDefaultRuleKeyFactory;
+import com.facebook.buck.rules.modern.SerializationTestHelper;
 import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.PathNormalizer;
+import com.fasterxml.jackson.annotation.JsonAutoDetect;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonIgnoreType;
+import com.fasterxml.jackson.annotation.PropertyAccessor;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.FileSystem;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Optional;
+import java.util.function.Supplier;
 import org.junit.Test;
 
 public class CxxPreprocessAndCompileTest {
@@ -127,6 +142,8 @@ public class CxxPreprocessAndCompileTest {
                   PathSourcePath.of(
                       projectFilesystem,
                       PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/compiler")))),
+          ToolType.CXX,
+          false,
           false);
   private Preprocessor PREPROCESSOR_WITH_COLOR_SUPPORT =
       new PreprocessorWithColorSupport(
@@ -145,8 +162,7 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void inputChangesCauseRuleKeyChangesForCompilation() {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
@@ -183,7 +199,7 @@ public class CxxPreprocessAndCompileTest {
     // Generate a rule key for the defaults.
 
     RuleKey defaultRuleKey =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -202,7 +218,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the compiler causes a rulekey change.
 
     RuleKey compilerChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -216,6 +232,7 @@ public class CxxPreprocessAndCompileTest {
                                     projectFilesystem,
                                     PathNormalizer.toWindowsPathIfNeeded(
                                         Paths.get("/root/different")))),
+                            ToolType.CXX,
                             false),
                         DEFAULT_TOOL_FLAGS,
                         DEFAULT_USE_ARG_FILE),
@@ -228,7 +245,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the operation causes a rulekey change.
 
     RuleKey operationChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
@@ -259,7 +276,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the platform flags causes a rulekey change.
 
     RuleKey platformFlagsChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -282,7 +299,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the rule flags causes a rulekey change.
 
     RuleKey ruleFlagsChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -305,7 +322,7 @@ public class CxxPreprocessAndCompileTest {
     // Verify that changing the input causes a rulekey change.
 
     RuleKey inputChange =
-        new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.compile(
                     target,
@@ -326,8 +343,7 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void preprocessorFlagsRuleKeyChangesCauseRuleKeyChangesForPreprocessing() {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     FakeFileHashCache hashCache =
         FakeFileHashCache.createFromStrings(
@@ -363,7 +379,7 @@ public class CxxPreprocessAndCompileTest {
 
     class TestData {
       public RuleKey generate(PreprocessorFlags flags) {
-        return new TestDefaultRuleKeyFactory(hashCache, pathResolver, ruleFinder)
+        return new TestDefaultRuleKeyFactory(hashCache, ruleFinder)
             .build(
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
@@ -396,18 +412,19 @@ public class CxxPreprocessAndCompileTest {
     PreprocessorFlags defaultFlags = PreprocessorFlags.builder().build();
     PreprocessorFlags alteredFlags =
         defaultFlags.withFrameworkPaths(
-            FrameworkPath.ofSourcePath(
-                FakeSourcePath.of(
-                    PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/different")))));
+            ImmutableList.of(
+                FrameworkPath.ofSourcePath(
+                    FakeSourcePath.of(
+                        PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/different"))))));
     assertNotEquals(testData.generate(defaultFlags), testData.generate(alteredFlags));
   }
 
   @Test
   public void usesCorrectCommandForCompile() {
     // Setup some dummy values for inputs to the CxxPreprocessAndCompile.
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
@@ -423,14 +440,11 @@ public class CxxPreprocessAndCompileTest {
             projectFilesystem,
             ruleFinder,
             new CompilerDelegate(
-                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                DEFAULT_COMPILER,
-                flags,
-                DEFAULT_USE_ARG_FILE),
+                NoopDebugPathSanitizer.INSTANCE, DEFAULT_COMPILER, flags, DEFAULT_USE_ARG_FILE),
             outputName,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
+            NoopDebugPathSanitizer.INSTANCE);
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
@@ -440,8 +454,7 @@ public class CxxPreprocessAndCompileTest {
             .add("-O3")
             .add(
                 "-o",
-                PathNormalizer.toWindowsPathIfNeeded(Paths.get("buck-out/gen/foo/bar__/test.o"))
-                    .toString())
+                BuildTargetPaths.getGenPath(projectFilesystem, target, "%s__/test.o").toString())
             .add("-c")
             .add(input.toString())
             .build();
@@ -460,16 +473,16 @@ public class CxxPreprocessAndCompileTest {
     SourcePath compiler = FakeSourcePath.of(projectFilesystem, "compiler");
     Tool compilerTool = new CommandTool.Builder().addInput(compiler).build();
 
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    SourcePathResolverAdapter pathResolver = ruleFinder.getSourcePathResolver();
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
     projectFilesystem.writeContentsToPath(
         "test.o: " + pathResolver.getRelativePath(DEFAULT_INPUT) + " ",
-        projectFilesystem.getPath(
-            PathNormalizer.toWindowsPathIfNeeded(Paths.get("buck-out/gen/foo/bar__/test.o.dep"))
-                .toString()));
+        BuildTargetPaths.getGenPath(
+                projectFilesystem, BuildTargetFactory.newInstance("//foo:bar"), "%s__")
+            .resolve("test.o.dep"));
     PathSourcePath fakeInput = FakeSourcePath.of(projectFilesystem, "test.cpp");
 
     CxxPreprocessAndCompile cxxPreprocess =
@@ -498,7 +511,8 @@ public class CxxPreprocessAndCompileTest {
             CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
         cxxPreprocess.getInputsAfterBuildingLocally(context, cellPathResolver),
-        hasItem(preprocessor));
+        not(hasItem(preprocessor)));
+    assertFalse(cxxPreprocess.getCoveredByDepFilePredicate(pathResolver).test(preprocessor));
 
     CxxPreprocessAndCompile cxxCompile =
         CxxPreprocessAndCompile.compile(
@@ -507,7 +521,7 @@ public class CxxPreprocessAndCompileTest {
             ruleFinder,
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                new GccCompiler(compilerTool, false),
+                new GccCompiler(compilerTool, ToolType.CXX, false),
                 CxxToolFlags.of(),
                 DEFAULT_USE_ARG_FILE),
             DEFAULT_OUTPUT,
@@ -515,14 +529,16 @@ public class CxxPreprocessAndCompileTest {
             DEFAULT_INPUT_TYPE,
             CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
-        cxxCompile.getInputsAfterBuildingLocally(context, cellPathResolver), hasItem(compiler));
+        cxxCompile.getInputsAfterBuildingLocally(context, cellPathResolver),
+        not(hasItem(compiler)));
+    assertFalse(cxxCompile.getCoveredByDepFilePredicate(pathResolver).test(compiler));
   }
 
   @Test
   public void usesColorFlagForCompilationWhenRequested() {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     String output = "test.o";
     Path input = Paths.get("test.ii");
@@ -556,9 +572,9 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void usesColorFlagForPreprocessingWhenRequested() {
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     String output = "test.ii";
     Path input = Paths.get("test.cpp");
@@ -612,12 +628,12 @@ public class CxxPreprocessAndCompileTest {
   @Test
   public void usesUnixPathSeparatorForCompile() {
     // Setup some dummy values for inputs to the CxxPreprocessAndCompile.
-    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestActionGraphBuilder());
-    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
-    BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildContext context =
+        FakeBuildContext.withSourcePathResolver(ruleFinder.getSourcePathResolver());
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     Path includePath = PathNormalizer.toWindowsPathIfNeeded(Paths.get("/foo/bar/zap"));
-    String includedPathStr = MorePaths.pathWithUnixSeparators(includePath);
+    String includedPathStr = PathFormatter.pathWithUnixSeparators(includePath);
 
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
@@ -625,8 +641,10 @@ public class CxxPreprocessAndCompileTest {
             .addRuleFlags(StringArg.of("-O3"))
             .addRuleFlags(StringArg.of("-I " + includedPathStr))
             .build();
-    String outputName = "baz\\test.o";
-    Path input = Paths.get("foo\\test.ii");
+
+    String slash = File.separator;
+    String outputName = "baz" + slash + "test.o";
+    Path input = Paths.get("foo" + slash + "test.ii");
 
     CxxPreprocessAndCompile buildRule =
         CxxPreprocessAndCompile.compile(
@@ -634,21 +652,21 @@ public class CxxPreprocessAndCompileTest {
             projectFilesystem,
             ruleFinder,
             new CompilerDelegate(
-                CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
+                NoopDebugPathSanitizer.INSTANCE,
                 new GccCompiler(
                     new HashedFileTool(
                         () ->
                             PathSourcePath.of(
                                 projectFilesystem,
                                 PathNormalizer.toWindowsPathIfNeeded(Paths.get("/root/compiler")))),
-                    false,
-                    true),
+                    ToolType.CXX,
+                    false),
                 flags,
                 DEFAULT_USE_ARG_FILE),
             outputName,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
+            NoopDebugPathSanitizer.INSTANCE);
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
@@ -656,13 +674,136 @@ public class CxxPreprocessAndCompileTest {
             .add("-x", "c++")
             .add("-ffunction-sections")
             .add("-O3")
-            .add("-I " + MorePaths.pathWithUnixSeparators(includePath))
-            .add("-o", "buck-out/gen/foo/bar__/baz/test.o")
+            .add("-I " + PathFormatter.pathWithUnixSeparators(includePath))
+            .add(
+                "-o",
+                "buck-out/gen/"
+                    + BuildTargetPaths.getBasePath(
+                        projectFilesystem, BuildTargetFactory.newInstance("//foo:bar"), "%s__")
+                    + "/baz/test.o")
             .add("-c")
-            .add(MorePaths.pathWithUnixSeparators(input.toString()))
+            .add(PathFormatter.pathWithUnixSeparators(input.toString()))
             .build();
     ImmutableList<String> actualCompileCommand =
         buildRule.makeMainStep(context, false).getCommand();
     assertEquals(expectedCompileCommand, actualCompileCommand);
+  }
+
+  @JsonIgnoreType
+  abstract class FileSystemMixIn {}
+
+  abstract class MemoizingSupplierMixIn<T> {
+    @JsonIgnore Supplier<T> delegate;
+  }
+
+  abstract class PreprocessorDelegateMixIn {
+    @JsonIgnore Optional<BuildRule> aggregatedDeps;
+  }
+
+  @Test
+  public void testSerialization() throws IOException, ClassNotFoundException {
+    SourcePathRuleFinder ruleFinder = new TestActionGraphBuilder();
+    BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
+    Path includePath = PathNormalizer.toWindowsPathIfNeeded(Paths.get("/foo/bar/zap"));
+    String includedPathStr = PathFormatter.pathWithUnixSeparators(includePath);
+    CxxToolFlags cxxToolFlags =
+        CxxToolFlags.explicitBuilder()
+            .addPlatformFlags(StringArg.of("-ffunction-sections"))
+            .addRuleFlags(StringArg.of("-O3"))
+            .addRuleFlags(StringArg.of("-I " + includedPathStr))
+            .build();
+    PreprocessorFlags preprocessorFlags =
+        PreprocessorFlags.builder()
+            .addIncludes(
+                CxxHeadersDir.of(
+                    CxxPreprocessables.IncludeType.SYSTEM, FakeSourcePath.of("foo/bar")),
+                CxxHeadersDir.of(CxxPreprocessables.IncludeType.SYSTEM, FakeSourcePath.of("test")))
+            .build()
+            .withFrameworkPaths(
+                ImmutableList.of(
+                    FrameworkPath.ofSourcePath(
+                        FakeSourcePath.of(
+                            PathNormalizer.toWindowsPathIfNeeded(Paths.get("root/different"))))));
+    Optional<CxxIncludePaths> leadingIncludePaths =
+        Optional.of(preprocessorFlags.getCxxIncludePaths());
+    PreprocessorDelegate preprocessorDelegate =
+        new PreprocessorDelegate(
+            CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
+            FakeSourcePath.of("working/dir"),
+            new GccPreprocessor(
+                new HashedFileTool(
+                    () ->
+                        PathSourcePath.of(
+                            projectFilesystem,
+                            PathNormalizer.toWindowsPathIfNeeded(Paths.get("repo/preprocessor"))))),
+            preprocessorFlags,
+            DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
+            leadingIncludePaths,
+            Optional.of(new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps")))),
+            ImmutableSortedSet.of("white", "list"));
+    CompilerDelegate compilerDelegate =
+        new CompilerDelegate(
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
+            new GccCompiler(
+                new HashedFileTool(
+                    () ->
+                        PathSourcePath.of(
+                            projectFilesystem,
+                            PathNormalizer.toWindowsPathIfNeeded(Paths.get("repo/compiler")))),
+                ToolType.CXX,
+                false,
+                false),
+            cxxToolFlags,
+            DEFAULT_USE_ARG_FILE);
+    CxxPrecompiledHeader precompiledHeader =
+        new CxxPrecompiledHeader(
+            /* canPrecompile */ false,
+            target,
+            new FakeProjectFilesystem(),
+            ImmutableSortedSet.of(),
+            Paths.get("dir/foo.hash1.hash2.hpp"),
+            preprocessorDelegate,
+            compilerDelegate,
+            CxxToolFlags.of(),
+            FakeSourcePath.of("foo.h"),
+            CxxSource.Type.C,
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
+
+    CxxPreprocessAndCompile.Impl cxxPreprocessAndCompile =
+        new CxxPreprocessAndCompile.Impl(
+            target,
+            Optional.of(preprocessorDelegate),
+            compilerDelegate,
+            DEFAULT_OUTPUT,
+            DEFAULT_INPUT,
+            Optional.of(precompiledHeader),
+            DEFAULT_INPUT_TYPE,
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
+
+    CxxPreprocessAndCompile.Impl reconstructed =
+        SerializationTestHelper.serializeAndDeserialize(
+            cxxPreprocessAndCompile,
+            CxxPreprocessAndCompile.Impl.class,
+            ruleFinder,
+            TestCellPathResolver.get(projectFilesystem),
+            ruleFinder.getSourcePathResolver(),
+            new ToolchainProviderBuilder().build(),
+            cellPath -> projectFilesystem);
+
+    ObjectMapper objectMapper = new ObjectMapper();
+    objectMapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
+    objectMapper.configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
+    objectMapper.addMixIn(FileSystem.class, FileSystemMixIn.class);
+    objectMapper.addMixIn(
+        Class.forName("com.google.common.base.Suppliers$NonSerializableMemoizingSupplier"),
+        MemoizingSupplierMixIn.class);
+    objectMapper.addMixIn(PreprocessorDelegate.class, PreprocessorDelegateMixIn.class);
+
+    String originalStr =
+        objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(cxxPreprocessAndCompile);
+    String reconstructedSir =
+        objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(reconstructed);
+
+    assertEquals(originalStr, reconstructedSir);
   }
 }
